Integrating kidoju.widgets.highlighter and kidoju.widgets.textgaps https://github.com/kidoju/Kidoju-Widgets/issues/230 https://github.com/kidoju/Kidoju-Widgets/issues/231

--- a/src/styles/kidoju.widgets.highlighter.less
+++ b/src/styles/kidoju.widgets.highlighter.less
@@ -1,5 +1,8 @@
 .kj-highlighter {
     user-select: element;
+    &:not([data-enable="false"]) {
+        cursor: pointer;
+    }
     .kj-highlighter-active {
         background-color: #ffff00;
     }
